# FFmpegPlayer

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/kelly/ffmpegplayer/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/kelly/neteaseplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  JniCallbackHelper.cpp  JniCallbackHelper.h  LiveAudioChannel.cpp  LiveAudioChannel.h  LiveVideoChannel.cpp  LiveVideoChannel.h  NEPlayer.cpp  NEPlayer.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/kelly/ffmpegplayer/: MainActivity.kt  MyPlayer.kt  VideoPlayActivity.kt
app/src/main/java/com/kelly/ffmpegplayer/live/: AudioChannel.java  CameraHelper.java  LiveActivity.java  LivePusher.java  VideoChannel.java
app/src/main/java/com/kelly/neteaseplayer/: MainActivity.kt  MyPlayer.kt
app/src/main/res/layout/: activity_live.xml  activity_main.xml  activity_play.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/kelly/ffmpegplayer/: ExampleUnitTest.kt
app/src/test/java/com/kelly/neteaseplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
